<resources>
    <string name="app_name">ROUS</string>
    <string name="title_activity_login">Sign in</string>
    <string name="com_auth0_domain">muffindreamers.auth0.com</string>
    <string name="com_auth0_client_id">trq9MLo8GsyhnNe6iKDUIOBZrauB1cAD</string>
    <string name="title_activity_fetch_rat_data">FetchRatDataActivity</string>
    <string name="title_activity_detailed_rat_screen">DetailedRatScreen</string>
    <string name="title_activity_admin_panel">AdminPanel</string>
    <string name="textView">TextView</string>
    <string name="title_activity_add_new_rat_data">AddNewRatData</string>
    <string name="title_activity_graph_rat_data">GraphRatData</string>
    <string name="welcomeLogo">welcomeLogo</string>
    <string name="report_and_browse_rat_sightings_posted_in_your_area">Report
        and browse rat sightings posted in your area!</string>
    <string name="logout">Logout</string>
    <string name="add_new">Add New</string>
    <string name="to_map">To Map</string>
    <string name="to_graph">To Graph</string>
    <string name="back">Back</string>
    <string name="start_date">Start Date</string>
    <string name="end_date">End Date</string>
    <string name="user_should_never_see_this">User should never see this</string>
    <string name="starting_date">Starting Date:</string>
    <string name="ending_date">Ending Date:</string>
    <string name="get_started">Get Started!</string>
    <string name="add">Add</string>
    <string name="cancel">Cancel</string>
    <string name="location_type">Location Type:</string>
    <string name="borough">Borough Location:</string>
    <string name="zipCode">ZipCode:</string>
    <string name="address">Address:</string>
    <string name="address_hint">Type address</string>
    <string name="city">City:</string>
    <string name="city_hint">Type city</string>
    <string name="latitude">Latitude:</string>
    <string name="longitude">Longitude:</string>
    <string name="button">Button</string>
    <string name="menu">Menu</string>
    <string name="start_date_01_11_91_14_58_pm_est">Start Date: 01/11/91 14:58 PM EST</string>
    <string name="end_date_01_11_91_14_58_pm_est">End Date: 01/11/91 14:58 PM EST</string>
    <string name="rat_id_num">Rat Identification Number:</string>
    <string name="date_created">Date Created:</string>
    <string name="username">Username:</string>
    <string name="full_name">Full name:</string>
    <string name="user_type">Permissions Level:</string>
    <string name="location_button">Use Location</string>
    <string name="submit_at_location_button">Report at my location</string>

    <!-- Admin panel strings -->
    <string name="admin_name_prefix">Name:\u0020</string>
    <string name="admin_email_prefix">Email:\u0020</string>
    <string name="admin_verified_prefix">Email Verified:\u0020</string>
    <string name="admin_created_prefix">Creation Date:\u0020</string>
    <string name="admin_login_count_prefix">Login Count:\u0020</string>
    <string name="admin_last_ip_prefix">Last IP:\u0020</string>
    <string name="admin_last_login_prefix">Last Login Date:\u0020</string>
    <string name="admin_blocked_prefix">Blocked:\u0020</string>
</resources>
