<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:padding="8dp"
    tools:context=".controllers.AdminPanel">

    <AutoCompleteTextView
        android:id="@+id/admin_search_box"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_toLeftOf="@id/admin_search_button"
        android:layout_marginRight="8dp"
        android:hint="Search for user"
        android:completionThreshold="0"
        android:textSize="@dimen/admin_text_size"/>

    <Button
        android:id="@+id/admin_search_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:text="Go"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentLeft="true"
        android:layout_below="@id/admin_search_box"
        android:orientation="vertical"
        android:layout_marginTop="8dp">

        <TextView
            android:id="@+id/admin_name_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/admin_name_prefix"
            android:textSize="@dimen/admin_text_size"/>

        <TextView
            android:id="@+id/admin_email_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/admin_email_prefix"
            android:textSize="@dimen/admin_text_size"/>

        <TextView
            android:id="@+id/admin_verified_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/admin_verified_prefix"
            android:textSize="@dimen/admin_text_size"/>

        <TextView
            android:id="@+id/admin_created_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/admin_created_prefix"
            android:textSize="@dimen/admin_text_size"/>

        <TextView
            android:id="@+id/admin_count_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/admin_login_count_prefix"
            android:textSize="@dimen/admin_text_size"/>

        <TextView
            android:id="@+id/admin_ip_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/admin_last_ip_prefix"
            android:textSize="@dimen/admin_text_size"/>

        <TextView
            android:id="@+id/admin_login_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/admin_last_login_prefix"
            android:textSize="@dimen/admin_text_size"/>

        <TextView
            android:id="@+id/admin_blocked_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/admin_blocked_prefix"
            android:textSize="@dimen/admin_text_size"/>

        <GridLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:rowCount="1"
            android:layout_gravity="center"
            android:columnCount="2">
            <Button
                android:id="@+id/admin_block_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Block"
                android:layout_marginRight="8dp"
                android:layout_column="0" />
            <Button
                android:id="@+id/admin_back_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Back"
                android:layout_column="1"/>
        </GridLayout>


    </LinearLayout>


</RelativeLayout>