<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="match_parent">

    <ListView
        android:id="@+id/main_list"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/main_grid"
        android:layout_alignParentStart="true" />

    <GridLayout
        android:id="@+id/main_grid"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:rowCount="2"
        android:columnCount="4">

        <Button
            android:id="@+id/logout_main"
            android:text="@string/logout"
            android:layout_width="@dimen/buttonWidth"
            android:layout_height="wrap_content"
            android:layout_row="0"
            android:layout_column="0"
            android:layout_margin="5dp"/>

        <Button
            android:id="@+id/add_new_main"
            android:text="@string/add_new"
            android:layout_width="@dimen/buttonWidth"
            android:layout_height="wrap_content"
            android:layout_row="0"
            android:layout_column="1"
            android:layout_margin="5dp"/>

        <Button
            android:id="@+id/map_button"
            android:text="@string/to_map"
            android:layout_width="@dimen/buttonWidth"
            android:layout_height="wrap_content"
            android:layout_row="1"
            android:layout_column="1"
            android:layout_margin="5dp"/>

        <Button
            android:id="@+id/graph_button"
            android:text="@string/to_graph"
            android:layout_width="@dimen/buttonWidth"
            android:layout_height="wrap_content"
            android:layout_row="1"
            android:layout_column="0"
            android:layout_margin="5dp"/>

        <Button
            android:id="@+id/admin_button"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="fill_vertical"
            android:layout_margin="5dp"
            android:layout_row="0"
            android:layout_column="3"
            android:layout_rowSpan="2"
            android:text="Admin Panel"
            android:visibility="gone"/>
    </GridLayout>
</RelativeLayout>