<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:id="@+id/map_frame_container"
        android:layout_weight="1">

    </FrameLayout>

    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:rowCount="1"
        android:columnCount="3"
        android:layout_weight="0"
        android:padding="8dp">

        <EditText
            android:id="@+id/start_map"
            android:layout_column="0"
            android:layout_columnWeight="1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="none"
            android:focusable="false"
            android:hint="@string/start_date" />

        <EditText
            android:id="@+id/end_map"
            android:layout_column="1"
            android:layout_columnWeight="1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="none"
            android:focusable="false"
            android:hint="@string/end_date"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"/>

        <Button
            android:id="@+id/map_return"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="2"
            android:layout_columnWeight="0"
            android:text="@string/back" />

    </GridLayout>

</LinearLayout>